fix some layout issue footer

--- a/src/components/CoreComponents/Footer/Footer.module.css
+++ b/src/components/CoreComponents/Footer/Footer.module.css
@@ -15,11 +15,12 @@
   margin: 0;
   display: flex;
   flex-wrap: wrap;
-  gap: 15px;
+  gap: 0px;
 }
 
 .listItem {
   display: inline-block;
+  border-left: 1px solid white;
 }
 
 .footerButton {
